--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sdl2 = "0.38.0"
+rand = "0.9.2"
+sdl2 = {version ="0.38.0", features = ["ttf"]}
+[build-dependencies]
+embed-resource = "2"
